--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "life-medical-system-front-end",
+  "name": "life-health-system-frontend",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "bootstrap": "5.1.3",
     "react": "17.0.2",
+    "react-bootstrap": "2.2.1",
     "react-dom": "17.0.2",
+    "react-hook-form": "7.28.1",
+    "react-router-dom": "6.2.2",
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
